crates/tesshir/tests/fixtures/check/negative_array_length.golden
Error: check/negative_array_length.tess:2:16: array length must be nonnegative
