crates/tesshir/tests/fixtures/check/negative_array_length.tess
struct Bad {
    data: [u8; -1],
}
